--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--HEADER-->
         <header>
             <div class="container">
-                <h1 class="logo"><a>&lt;Sebastian Yabiku/&gt;</a></h1>
+                <h1 class="logo"><a>&lt;Mario Dueñas/&gt;</a></h1>
                 <nav>
                     <ul>
                         <li><a href="#about-me">Sobre mi</a></li>
