--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 </head>
 
 <body>
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.3"></script>
     <div>
         <!--HEADER-->
         <header>
@@ -105,6 +107,9 @@
                                     <a class="skype" href="">
                                         <i class="fab fa-skype"></i>
                                     </a>
+                                </li>
+                                <li>
+                                        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="box_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
                                 </li>
                             </ul>
                         </div>
